MAINTAINERCLEANFILES = Makefile.in

#SUBDIRS = 

noinst_LTLIBRARIES = libxdpd_driver_gnu_linux_dpdk_ng_src_processing.la

libxdpd_driver_gnu_linux_dpdk_ng_src_processing_la_SOURCES = \
	processing.h \
	processing.cc \
	mem_manager.h \
	mem_manager.cc
libxdpd_driver_gnu_linux_dpdk_ng_src_processing_la_LIBADD = 
